2010-11-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetype_extensions.conf:
   Add *.latex pattern.


2010-11-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, src/callbacks.c,
   src/callbacks.h, geany.glade:
   Add 'Mark All' Search menu command.
 * src/symbols.c, doc/geany.txt, doc/geany.html:
   If the current word's tag is on the current line, make Go to Tag
   Definition look for a tag declaration instead, as this is more
   useful. Likewise make Go to Tag Declaration search for a tag
   definition in this case also.
 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
   Don't use 'Enable' in pref labels when unnecessary.
   Rename XML/HTML tag autocompletion -> auto-closing.
 * src/keyfile.c, src/document.c, src/document.h, doc/geany.txt,
   doc/geany.html:
   Add gio_unsafe_save_backup hidden pref (patch by Lex Trotman,
   thanks).
 * src/keybindings.c, src/editor.c, src/editor.h:
   Add editor_get_prefs() instead of editor_get_long_line_*()
   functions. This general function can be extended to support
   various project and document overrides.
 * src/keybindings.c, src/project.c, src/prefs.c, src/keyfile.c,
   src/editor.c, src/editor.h:
   Remove unnecessary 'global' from long line editor pref field names.


2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Explain how to grep the source for Scintilla lexer properties.
 * src/sidebar.c, src/callbacks.c, src/main.c:
   Fix auto-displaying of sidebar tab bar when sidebar is reshown.
   Only auto-display symbols and documents tabs when showing the
   sidebar if there are no plugin tabs.
   Don't hide the sidebar on startup if only plugin tabs are visible
   (fixes #3101867).
 * src/plugindata.h:
   Make GEANY_API_VERSION, GEANY_ABI_VERSION macros instead of enums
   so you can protect code with '#if GEANY_API_VERSION >= 200'.
 * src/plugindata.h: